packages/typ/tests/fixtures/diagnostics/0127_adt_variant_branch_result_mismatch_01.ml.infer.expected
File "0127_adt_variant_branch_result_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0127_adt_variant_branch_result_mismatch_01 is not a valid module name.

File "0127_adt_variant_branch_result_mismatch_01.ml", line 4, characters 11-12:
4 |   | B y -> y
               ^
Error: The value y has type bool but an expression was expected of type int
