packages/typ/tests/fixtures/diagnostics/0127_adt_variant_branch_result_mismatch_01.ml
type rec_alpha = I of int | B of bool
let read_alpha = function
  | I x -> x
  | B y -> y
